--- a/components/Email-InputForm/_inputForm.css
+++ b/components/Email-InputForm/_inputForm.css
@@ -11,15 +11,18 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
         padding-bottom: 20px;
     }
+        .form-body h3{
+            text-align: left !important;
+        }
         .input-form-my-email{
             width: 100%;
             display: flex;
             align-items: baseline;
             position: relative;
-        }
+        }   
             .input-form-my-email p{
                 font-size: 16px;
                 width: min-content;
@@ -41,52 +44,50 @@
                 transform: scale(1.015);
                 opacity: .90;
             }
+            .input-form-my-email div i{
+                font-size: 16px;
+            }
+            .email-input-box{
+                height: 40px;
+                width: 100%;
+                text-align: left;
+                font-size: 16px;
+                padding: 10px 10px;
+                box-sizing: border-box;
+                border-radius: 4px;
+                border: none;
+                font-family: var(--mainFont);
+            }
+    
+            .email-input-box:focus{
+                border: 1px solid var(--mainColor);
+                border-radius: 4px;
+                font-family: var(--mainFont);
+            }
+    
+            .message-input-box{
+                min-height: 100px;
+                width: 100%;
+                font-size: 16px;
+                padding: 10px 10px;
+                box-sizing: border-box;
+                text-align:left;
+                border-radius: 4px;
+                font-family: var(--mainFont);
+                resize: none;
+                border: none;
+            }
+            .message-input-box:focus{
+                border: 1px solid var(--mainColor);
+                border-radius: 4px;
+                font-family: var(--mainFont);
+            }
            
-        .form-body h3{
-            font-size: 20px;
-            text-align: left;
-            padding: 0;
-        }
-
-        .email-input-box{
-            height: 40px;
-            width: 100%;
-            text-align: left;
-            font-size: 16px;
-            padding: 10px 10px;
-            box-sizing: border-box;
-            border-radius: 4px;
-            border: none;
-            font-family: var(--mainFont);
-        }
-
-        .email-input-box:focus{
-            border: 1px solid var(--mainColor);
-            border-radius: 4px;
-            font-family: var(--mainFont);
-        }
-
-        .message-input-box{
-            min-height: 100px;
-            width: 100%;
-            font-size: 16px;
-            padding: 10px 10px;
-            box-sizing: border-box;
-            text-align:left;
-            border-radius: 4px;
-            font-family: var(--mainFont);
-            resize: none;
-            border: none;
-        }
-        .message-input-box:focus{
-            border: 1px solid var(--mainColor);
-            border-radius: 4px;
-            font-family: var(--mainFont);
-        }
-
+       
     .submit-button-CTA{
         margin: 10px 0;
     }
+
 
     .email-form-send-pop-up{
         position: fixed;
@@ -136,58 +137,65 @@
 
 @media (min-width: 601px){
 
-
-
-.form-body{
    
-    gap: 20px;
-    padding-bottom: 30px;
-}
-
-.form-body h3{
-    font-size: 30px;
-  
-}
-
-.form-body .email-input-box{
-    height: 60px;
-    font-size: 26px;
-    padding: 20px;
-    border-radius: 8px;
-}
-
-.email-input-box:focus{
-    border: 2px solid var(--mainColor);
-    border-radius: 8px;
-}
-
-.form-body .message-input-box{
-    min-height: 200px; 
-    font-size: 26px;
-    padding: 20px;
-    border-radius: 8px;
-
-}
-.message-input-box:focus{
-    border: 2px solid var(--mainColor);
-    border-radius: 8px;
-}
-
-
-
-
-.email-pop-up-body{
-   
-    height: 250px;
-    width: 350px;   
-    border-radius: 22px;
-    border: 2px solid var(--mainColor);
-}
-.email-pop-up-body h2{
- 
-    font-size: 34px;
-
-}
+    
+        .form-body{
+            gap: 20px;
+            padding-bottom: 30px;
+        }
+                .input-form-my-email p{
+                    font-size: 24px;
+                }
+                .input-form-my-email div{
+                    width: 40px;
+                    height: 40px;
+                }
+                .input-form-my-email div i{
+                    font-size: 24px;
+                }
+                .email-input-box{
+                    height: 50px;
+                    font-size: 24px;
+                    padding: 20px 20px;
+                    border-radius: 8px;
+                }
+        
+                .email-input-box:focus{
+                    border: 2px solid var(--mainColor);
+                    border-radius: 8px;
+                }
+        
+                .message-input-box{
+                    min-height: 200px;
+                    font-size: 24px;
+                    padding: 20px 20px;
+                    border-radius: 8px;
+                }
+                .message-input-box:focus{
+                    border: 2px solid var(--mainColor);
+                    border-radius: 8px;
+                }
+               
+           
+        .submit-button-CTA{
+            margin: 20px 0;
+        }
+        
+            .email-pop-up-body{
+                height: 225px;
+                width: 350px;
+                border-radius: 22px;
+                border: 2px solid var(--mainColor);
+            }
+                .email-pop-up-body h2{
+                    text-align: center;
+                    font-size: 32px;
+                    margin: 10px 0;
+                    font-weight: 700;
+                }
+                .email-pop-up-body span{
+                    margin: 10px 0;
+                }
 
 
 }
