--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -26,7 +26,7 @@ b{
         padding-top: 20%;
         padding-bottom: 20%;
         }
-            .aboutMe-body h2{
+            .aboutMe-copy h2{
                 font-size: 24px;
                 text-align:left;
                 font-weight: 700;
@@ -75,9 +75,14 @@ b{
 
         .about-me-read-more-content h3{
             font-size: 20px;
+            font-weight: 700;
+            text-align: left;
+            width: 100%;
         }
         .about-me-read-more-content p{
             font-size: 16px;
+            text-align: justify;
+            width: 100%;
         }
 
 
@@ -85,65 +90,52 @@ b{
 
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
-@media (min-width: 600px){
+@media (min-width: 601px){
 
- 
     .aboutMe-root{
-
-        margin-top: 10%;
-        margin-bottom: 20%;
-    
-    }
-
-    
-    .about-me-asset{
-        height: 450px;
-    }
-    
-    .aboutMe-body{
         margin-top: 10%;
     }
-    .aboutMe-body h2{
-        font-size: 34px;
-    }
     
-    
-    .aboutMe-copy p{
-        margin-bottom: 10%;
-        font-size: 26px;
-    }
-    .aboutme-copy-PFP{
-        height: 250px;
-        width: 250px; 
-        margin-bottom: 10%;
-        border: 4px solid white;
+        .aboutMe-content img{
+            height: 450px;
+        }
+        .aboutMe-copy{
+            padding-top: 10%;
+            padding-bottom: 10%;
+        }
+            .aboutMe-copy h2{
+                font-size: 34px;
+            }
 
-    }
-    .aboutme-copy-PFP img{
-        height: 1300px;
-        object-fit:cover;
-        position: relative;
-        top: 100%;
-    }
-    
-    
-    /* -------------------- Copy blur ------------------------*/
-    .copyIsClose{
-        margin-bottom: 10%;
-        height:120px;
-      
-    }
-    
-    .copyIsClose .contact-copy-blur {
-        bottom: -150%;
-        filter: blur(20px);
-    }
-    
-    .aboutMe-CTA button{
-        margin-top: 12%;
+            .aboutMe-copy p{
+                font-size: 24px;
+            }
 
+            .aboutMe-CTA button{
+                margin-top: 12%;
+            }
+
+    .about-me-read-more-content{
+        margin-bottom: 30%;
     }
-    
+
+        .aboutme-copy-PFP{
+            height: 300px;
+            width: 300px;
+            margin-bottom: 10%;
+            border: 4px solid white;
+        }
+        .aboutme-copy-PFP img{
+            height: 1200px;
+            top: 70%;
+        }
+
+        .about-me-read-more-content h3{
+            font-size: 30px;
+        }
+        .about-me-read-more-content p{
+            font-size: 24px;
+        }
 
 }
 
