--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -93,57 +93,38 @@ b{
 
     .landingPage-root{
         margin-top: 10%;
-        margin-bottom: 20%;
        
     }
-    .landingPage-root .landingPage-content{
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-    }
+        .landingPage-content{
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: center;
+            align-items: center;
+        }
 
-    .landingPage-content .astroBoy{
-        height: 450px;
-        object-fit: contain;
+            .landingPage-content img{
+                height: 450px;
+            }
+            
+            .landingPage-copy{
+                padding-top: 10%;
+                padding-bottom: 10%;
+            }
 
-    }
-    .landingPage-copy{
-        margin-top: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-    .landingPage-copy h2{
-        font-size: 30px;
-        margin: 0;
+                .landingPage-copy h2{
+                    font-size: 34px;
+                }
 
-    }
+                .landingPage-copy p{
+                    font-size: 20px;
+                }
 
-    .landingPage-copy p{
-        font-size: 20px;
-        font-weight: normal;
-        text-align: justify;
-
-    }
-
-    .landingPage-CTA{ 
-        display: flex;
-        margin-right: auto;
-        height: fit-content;
-        width: fit-content;
-        margin-top: 10%;
-    }
-    .landingPage-CTA button{
-        margin: 0px;
-        display: flex;
-        margin: 0px 0px;
-        height: fit-content;
-        width: fit-content;
-    }
+                .landingPage-CTA button{
+                    display: flex;
+                    margin: 0px;
+                    margin-top: 12%;
+                    height: fit-content;
+                    width: fit-content;
+                }
 
 }
