updating about me with a gap attribute and added Career description

--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -52,6 +52,7 @@ b{
         justify-content: center;
         align-items: center;
         margin-bottom: 40%;
+        gap: 25px;
     }
 
         .aboutme-copy-PFP{
