--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -1,129 +1,120 @@
-
-b{
-    color: var(--mainColor);
-    font-weight: 700;
+b {
+  color: var(--mainColor);
+  font-weight: 700;
 }
 ::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
+  width: 0px;
+  height: 0px;
 }
-.landingPage-root{
-    width: 80%;
-    height: min-content;
-    margin: 0 auto;
-    margin-top: 20%;
+.landingPage-root {
+  width: 80%;
+  height: min-content;
+  margin: 0 auto;
+  margin-top: 20%;
 }
-    .landingPage-content{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        height: 100%;
-        width: 100%;
-    }
+.landingPage-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+}
 
-        .landingPage-content img{
-            height: 250px;
-            object-fit: contain;
+.landingPage-content img {
+  height: 250px;
+  object-fit: contain;
+  animation: scale-opacity-in 0.7s cubic-bezier(0.5, 0.27, 0.45, 0.87);
+}
+.landingPage-copy {
+  padding-top: 20%;
+  padding-bottom: 20%;
+}
+.landingPage-copy h2 {
+  font-size: 24px;
+  text-align: left;
+  font-weight: 700;
+  width: 100%;
+  margin: 0;
+  animation: translation-X-in 0.8s cubic-bezier(0.69, 0.28, 0.61, 0.93);
+}
 
-        }
-        .landingPage-copy{
-            padding-top: 20%;
-            padding-bottom: 20%;
-        }
-            .landingPage-copy h2{
-                font-size: 24px;
-                text-align:left;
-                font-weight: 700;
-                width: 100%;
-                margin: 0;
-            }
+.landingPage-copy p {
+  font-size: 16px;
+  font-weight: normal;
+  text-align: justify;
+  animation: opacity-translation-Y-in 0.8s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+}
 
-            .landingPage-copy p{
-                font-size: 16px;
-                font-weight: normal;
-                text-align: justify;
-            }
-
-            .landingPage-CTA button{ 
-                display: flex;
-                margin-left: auto;
-                margin-top: 16%;
-            }
-
-
-
+.landingPage-CTA button {
+  display: flex;
+  margin-left: auto;
+  margin-top: 16%;
+  animation: opacity-in 0.4s cubic-bezier(0.48, 0.23, 0.61, 0.93);
+  animation-delay: 1s;
+  animation-fill-mode: backwards;
+}
 /* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
 
+@media (min-width: 601px) {
+  .landingPage-root {
+    margin-top: 10%;
+  }
 
+  .landingPage-content img {
+    height: 450px;
+  }
+  .landingPage-copy {
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
+  .landingPage-copy h2 {
+    font-size: 34px;
+  }
 
-@media (min-width: 601px){
-    
-    .landingPage-root{
-        margin-top: 10%;
-    }
-    
-        .landingPage-content  img{
-            height: 450px;
-        
-        }
-        .landingPage-copy{
-            padding-top: 10%;
-            padding-bottom: 10%;
-        }
-            .landingPage-copy h2{
-                font-size: 34px;
-            }
+  .landingPage-copy p {
+    font-size: 24px;
+  }
 
-            .landingPage-copy p{
-                font-size: 24px;
-            }
-            
-            .landingPage-CTA button{ 
-                margin-top: 12%;
-            }
+  .landingPage-CTA button {
+    margin-top: 12%;
+  }
 }
-
-
 
 /* --------------------------------------------------------------------- Desktop media query -----------------------------------------------------------------------*/
 
+@media (min-width: 1181px) {
+  .landingPage-root {
+    margin-top: 10%;
+  }
+  .landingPage-content {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+  }
 
-@media (min-width: 1181px){
+  .landingPage-content img {
+    height: 450px;
+  }
 
+  .landingPage-copy {
+    padding-top: 10%;
+    padding-bottom: 10%;
+  }
 
-    .landingPage-root{
-        margin-top: 10%;
-    }
-        .landingPage-content{
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: center;
-            align-items: center;
-        }
+  .landingPage-copy h2 {
+    font-size: 34px;
+  }
 
-            .landingPage-content img{
-                height: 450px;
-            }
-            
-            .landingPage-copy{
-                padding-top: 10%;
-                padding-bottom: 10%;
-            }
+  .landingPage-copy p {
+    font-size: 20px;
+  }
 
-                .landingPage-copy h2{
-                    font-size: 34px;
-                }
-
-                .landingPage-copy p{
-                    font-size: 20px;
-                }
-
-                .landingPage-CTA button{
-                    display: flex;
-                    margin: 0px;
-                    margin-top: 12%;
-                    height: fit-content;
-                    width: fit-content;
-                }
-
+  .landingPage-CTA button {
+    display: flex;
+    margin: 0px;
+    margin-top: 12%;
+    height: fit-content;
+    width: fit-content;
+  }
 }
